--- a/4week/Copying/Copying/Base.lproj/Main.storyboard
+++ b/4week/Copying/Copying/Base.lproj/Main.storyboard
@@ -63,7 +63,7 @@
             </objects>
             <point key="canvasLocation" x="1192" y="335"/>
         </scene>
-        <!--Shows-->
+        <!--Shows View Controller-->
         <scene sceneID="20A-aO-iZG">
             <objects>
                 <viewController id="2a7-60-uy8" customClass="TVShowsViewController" sceneMemberID="viewController">
@@ -79,7 +79,7 @@
                                 <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="qTT-ap-yXN" detailTextLabel="nqq-FO-kbc" style="IBUITableViewCellStyleSubtitle" id="FIa-pa-QPh">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" textLabel="qTT-ap-yXN" detailTextLabel="nqq-FO-kbc" style="IBUITableViewCellStyleSubtitle" id="FIa-pa-QPh">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="FIa-pa-QPh" id="UQv-e4-TDi">
@@ -99,6 +99,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="vLU-ko-3Kq" kind="show" identifier="ShowDetail" id="d53-MD-LiU"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -110,17 +113,83 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="bottom" secondItem="621-x1-jZr" secondAttribute="bottom" id="Bls-zO-09O"/>
-                            <constraint firstItem="621-x1-jZr" firstAttribute="top" secondItem="gi1-Ct-KFM" secondAttribute="bottom" id="Ff1-8z-X0Z"/>
+                            <constraint firstItem="621-x1-jZr" firstAttribute="top" secondItem="gi1-Ct-KFM" secondAttribute="bottom" constant="-44" id="Ff1-8z-X0Z"/>
                             <constraint firstItem="621-x1-jZr" firstAttribute="leading" secondItem="vSI-rs-LDQ" secondAttribute="leading" id="Qj9-Nm-LpP"/>
                             <constraint firstAttribute="trailing" secondItem="621-x1-jZr" secondAttribute="trailing" id="bgz-6D-1Qg"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Shows" id="5XR-hB-RL5"/>
+                    <navigationItem key="navigationItem" id="iA2-cP-tOq"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="tableView" destination="621-x1-jZr" id="Alg-FC-w7P"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="up0-Qn-PH4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1192" y="1056"/>
+            <point key="canvasLocation" x="1724" y="1056"/>
+        </scene>
+        <!--Show Detail View Controller-->
+        <scene sceneID="dfh-mV-OZ6">
+            <objects>
+                <viewController id="vLU-ko-3Kq" customClass="ShowDetailViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="c5K-l5-ObF"/>
+                        <viewControllerLayoutGuide type="bottom" id="jfX-iV-8Vs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="tFv-yS-28D">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lmJ-4r-Sci">
+                                <rect key="frame" x="45" y="98" width="226" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="226" id="Oup-QF-GyS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="numberOfSeasonss" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2rS-Zl-h8g">
+                                <rect key="frame" x="45" y="149" width="226" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="226" id="9kD-zt-seH"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ui5-5w-NWH">
+                                <rect key="frame" x="137" y="195" width="46" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="46" id="yyT-bx-WZI"/>
+                                </constraints>
+                                <state key="normal" title="Copy">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="actionCopy:" destination="vLU-ko-3Kq" eventType="touchUpInside" id="QlS-IG-XTu"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ui5-5w-NWH" firstAttribute="top" secondItem="2rS-Zl-h8g" secondAttribute="bottom" constant="25" id="90C-Kc-m7S"/>
+                            <constraint firstItem="2rS-Zl-h8g" firstAttribute="leading" secondItem="lmJ-4r-Sci" secondAttribute="leading" id="CzD-PV-QhX"/>
+                            <constraint firstItem="lmJ-4r-Sci" firstAttribute="top" secondItem="c5K-l5-ObF" secondAttribute="bottom" constant="34" id="GKC-I5-gsP"/>
+                            <constraint firstItem="2rS-Zl-h8g" firstAttribute="centerX" secondItem="tFv-yS-28D" secondAttribute="centerX" constant="-2" id="f19-Kq-0Ix"/>
+                            <constraint firstItem="2rS-Zl-h8g" firstAttribute="top" secondItem="lmJ-4r-Sci" secondAttribute="bottom" constant="30" id="oU0-Z8-uYf"/>
+                            <constraint firstItem="2rS-Zl-h8g" firstAttribute="centerX" secondItem="ui5-5w-NWH" secondAttribute="centerX" constant="-2" id="wnu-sb-Ge1"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+                    <connections>
+                        <outlet property="numberOfSeasonsLabel" destination="2rS-Zl-h8g" id="A1E-Vf-ZbR"/>
+                        <outlet property="titleLabel" destination="lmJ-4r-Sci" id="AQZ-3X-94u"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jwI-B1-ex4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2172" y="1056"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="gwo-ZB-8t7">
@@ -135,12 +204,31 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="lPE-7K-aAF"/>
-                        <segue destination="2a7-60-uy8" kind="relationship" relationship="viewControllers" id="rmn-RB-cQK"/>
+                        <segue destination="ZvE-A1-Ywf" kind="relationship" relationship="viewControllers" id="rmn-RB-cQK"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="liN-AK-hch" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="704" y="765"/>
+        </scene>
+        <!--Shows-->
+        <scene sceneID="6ML-H4-Cpa">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZvE-A1-Ywf" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Shows" id="5XR-hB-RL5"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="WBE-on-lzE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="2a7-60-uy8" kind="relationship" relationship="rootViewController" id="QQa-SF-3BU"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sVI-l8-ZwF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1192" y="1056"/>
         </scene>
     </scenes>
 </document>
